# configclient

./: CMakeLists.txt
cmake/: configclientConfig.cmake.in
include/: ConfigClient.hpp
include/configclient/: ConfigClient.hpp  ConfigClientIssues.hpp
scripts/: configDict.py  configDict.sh
src/: ConfigClient.cpp
test/apps/: ccTest.cpp
